# callisto

./: .dockerignore  .gitignore  .gitlab-ci.yml  CHANGELOG.md  Dockerfile  LICENSE  Makefile  README.md  mypy.ini  poetry-1.0.2.checksum  poetry-1.0.9.checksum  pyproject.toml  pytest.ini
callisto/: __init__.py  __main__.py
callisto/app/: parser.py
callisto/app/agent/: api.py  k8s.py  logger.py  main.py  runner.py  scheduler.py  sentry.py  state.py  task_runner.py  webdriver.py
callisto/libs/: exceptions.py  helpers.py  math.py  middleware.py  trace.py
callisto/libs/domains/: config.py  consts.py  logging.py  state.py
callisto/libs/services/: log.py  pod_event.py  state.py  task_runner.py
callisto/libs/services/k8s/: client.py  service.py
callisto/libs/services/webdriver/: client.py  protocol.py  service.py
callisto/libs/use_cases/: health_check.py  metrics.py  session.py  status.py  webdriver_logs.py
callisto/web/: __init__.py  health_check.py  metrics.py  routes.py  session.py  status.py  webdriver_logs.py
tests/: conftest.py
tests/integration/: conftest.py  test_create_session.py  test_delete_session.py  test_health_check.py  test_metrics.py  test_status.py
tests/integration/fixtures/: k8s.py  pod_fixture.json  webdriver.py
tests/smoke/: __init__.py  callisto-kind.yaml  conftest.py  test_k8s.py  test_selenium.py
