[tool.poetry]
name = "callisto"
version = "1.1.1"
description = "A service to manage browser pods in k8s"
authors = ["Wrike DevOps team <devops+oss@team.wrike.com>"]
license = "MIT"
repository = "https://github.com/wrike/callisto"
keywords = ['web', 'service', 'ci', 'automation']
exclude = ["tests", "*.tests"]

[tool.poetry.dependencies]
python = "^3.11"
aiohttp = "^3.8.4"
aiodns = "^3.0.0"
aiojobs = "^1.1.0"
kubernetes_asyncio = "^24.2.3"
click = "^8.1.3"
prometheus-client = "^0.17.0"
sentry-sdk = "^1.26.0"
tenacity = "^8.2.2"
graypy = "^2.1.0"
pyyaml = "^6.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=5.3.2"
pytest-asyncio = ">=0.10.0"
pytest-cov = ">=2.8.1"
flake8 = ">=3.7.9"
mypy = ">=0.750"
isort = ">=4.3.21"
toml = ">=0.10"
selenium = ">=4.10.0"
types-setuptools = ">=68.0.0.0"
types-pyyaml = ">=6.0.12.10"
black = ">=23.3.0"

[tool.isort]
line_length = 120
multi_line_output = 3
include_trailing_comma = true
lines_after_imports = 2
force_grid_wrap = 3
forced_separate = ["callisto"]
add_imports = "from __future__ import annotations"

[tool.pytest.ini_options]
addopts = """
    --strict-markers
    --quiet
    --no-cov-on-fail
    --asyncio-mode=auto
"""

[tool.mypy]
python_version = 3.11
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_unreachable = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_decorators = true
disallow_any_generics = true
check_untyped_defs = true
no_implicit_optional = true
strict_equality = true
# Too noisy
warn_no_return = false
warn_return_any = false

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
